--- a/sass/partials/shop.scss
+++ b/sass/partials/shop.scss
@@ -69,13 +69,19 @@
 					    margin: 0 1rem;
 					    top: 50%;
 					    @media only screen and (max-width: 767px) {
-							
+							top:  100%;
 						}
 					}
 					&:before{
 						left: -24%;
 						 @media only screen and (max-width: 767px) {
-							
+							left:  -35%;
+							right:  0;
+						}
+					}
+					&:after{
+						 @media only screen and (max-width: 767px) {
+							right:  -35%;
 						}
 					}
 				}
